Оптимизация кода согласно подсказкам IDE.